first angular application

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja" ng-app>
+<html lang="ja" ng-app="shelf">
   <head>
 	<meta charset='utf-8'>
 	<title>Shelf Management Application.</title>
@@ -9,37 +9,47 @@
 
   </head>
 
-  <body>
+  <body ng-controller="ShelfController as shelf">
 	
 	<div class="container">
-	  <h1>Shelf Management Application</h1>
+	  <h1><em>Shelf Management Application</em></h1>
 	  
-	  <input type="text" ng-model="search">
-	  <p>Result:{{search}}</p>
+	  <input type="text" ng-model="search" size="50" placeholder="絞込みを行いたい場合は何か入力してください...">
+	  <p><b>検索結果: </b> <em>{{shelf.books.length}}</em> <b>件</b></p>
 	  
 	  <table class="table table-hover">
 		<tr>
+		  <th>type</th>
 		  <th>title</th>
 		  <th>author</th>
 		  <th>price</th>
 		  <th>publish</th>
 		  <th>year</th>
 		  <th>status</th>
+		  <th>tags</th>
 		  <th>impressions</th>
 		</tr>
-		<tr>
-		  <td>旅のラゴス</td>
-		  <td>筒井康隆</td>
-		  <td>¥490</td>
-		  <td>新潮社</td>
-		  <td>1994</td>
-		  <td>読書中</td>
-		  <td>旅に出たくなるような気持ちにさせられる。一見ただのファンタジーとも捉えられるんだけど、妙に現実感を帯びている。</td>
+		<tr ng-repeat="book in shelf.books">
+		  <td>{{book.type}}</td>
+		  <td>{{book.title}}</td>
+		  <td>{{book.author}}</td>
+		  <td><em>{{book.price | currency:'&yen;':0}}</em></td>
+		  <td>{{book.publish}}</td>
+		  <td><em>{{book.year}}</em></td>
+		  <td>{{book.status}}</td>
+		  <td>
+			<span class="label label-info" ng-repeat="tag in book.tags">{{ tag }} </span>
+		  </td>
+		  <td>{{book.impressions | limitTo:20}}</td>
 		</tr>
 	  </table>
 	  
 	</div><!-- /container -->
 	
+	<!-- include libraries -->
 	<script src="js/external/angular.min.js"></script>	
+
+	<script src="js/app/app.js"></script>
+
   </body>
 </html>
