--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body ng-controller="ShelfController as shelf">
 	
 	<div class="container">
-	  <h1><em>Shelf Management Application</em></h1>
+	  <h1>Shelf Management Application</h1>
 	  <button class="btn btn-small btn-primary" type="button">新規登録</button>
 	  <p><b>登録件数: </b> <em>{{shelf.books.length}}</em> <b>件</b></p>
 			
-	  <table class="table table-striped">
+	  <table class="table table-striped" ng-show="shelf.books.length">
 		<tr>
 		  <th>type</th>
 		  <th>title</th>
@@ -36,10 +36,8 @@
 		  <td>{{book.publish}}</td>
 		  <td><em>{{book.year}}</em></td>
 		  <td>{{book.status}}</td>
-		  <td>
-			<span class="label label-info" ng-repeat="tag in book.tags">{{tag}}</span>
-		  </td>
-		  <td>{{book.impressions | limitTo:25}}</td>
+		  <td><span class="label label-info" ng-repeat="tag in book.tags">{{tag}}</span></td>
+		  <td>{{book.impressions | limitTo:25}}<span ng-show="book.impressions.length > 25">...</span></td>
 		</tr>
 	  </table>
 	  
