--- a/index.html
+++ b/index.html
@@ -4,16 +4,77 @@
 	<meta charset='utf-8'>
 	<title>Shelf Management Application.</title>
 	
-	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-	<link href="css/style.css" rel="stylesheet" media="screen">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 
   </head>
 
   <body ng-controller="ShelfController as shelf">
-	
+
+	<div class="navbar navbar-fixed-top navbar-static-top">
+	  <div class="navbar-inner">
+		<div class="container">
+		  <a class="brand" href="#">Shelf Management Application</a>
+		  <ul class="nav">
+			<li class="active"><a href="#">Shelf</a></li>
+			<li><a href="#">Report</a></li>
+			<li><a href="#">Settings</a></li>
+		  </ul>
+		  <form class="navbar-form pull-right">
+			<input type="button" class="btn btn-small btn-primary" value="Login" />
+		  </form>
+		</div>
+	  </div>
+	</div>
+
 	<div class="container">
-	  <h1>Shelf Management Application</h1>
-	  <button class="btn btn-small btn-primary" type="button">新規登録</button>
+	  <form name="registrationForm">
+		<h3>Book Registration</h3>
+		
+		<table>
+		  <tr>
+			<th>type</th>
+			<td>
+			  <select ng-model="registration.type">
+				<option value="文庫">文庫</option>
+				<option value="新書">新書</option>
+				<option value="教科書">教科書</option>
+				<option value="マンガ">マンガ</option>
+			  </select>
+			</td>
+		  </tr>
+		  <tr>
+			<th>title</th>
+			<td><input type="text" required ng-model="registration.title" /></td>
+		  </tr>
+		  <tr>
+			<th>author</th>
+			<td><input type="text" required ng-model="registration.author" /></td>
+		  </tr>
+		  <tr>
+			<th>publish</th>
+			<td><input type="text" required ng-model="registration.publish" /></td>			
+		  </tr>
+		  <tr>
+			<th>price</th>
+			<td><input type="number" min="0" ng-model="registration.price" /></td>
+		  </tr>
+		  <tr>
+			<th>year</th>
+			<td><input type="number" ng-model="registration.year" /></td>
+		  </tr>
+		  <tr>
+			<th>tags</th>
+			<td><input type="text" ng-model="registration.tags" /></td>
+		  </tr>
+		  <tr>
+			<th>impressions</th>
+			<td><textarea rows="2" ng-model="registration.impressions"></textarea></td>
+		  </tr>
+		</table>
+	  </form>
+	  <hr />
+
 	  <p><b>登録件数: </b> <em>{{shelf.books.length}}</em> <b>件</b></p>
 			
 	  <table class="table table-striped" ng-show="shelf.books.length">
