book registration function added

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 	</div>
 
 	<div class="container">
-	  <form name="registrationForm">
+	  <form name="registrationForm" ng-controller="BookController as bookCtrl" ng-submit="bookCtrl.addBook(shelf)">
 		<h3>Book Registration</h3>
 		
 		<table>
 		  <tr>
 			<th>type</th>
 			<td>
-			  <select ng-model="registration.type">
+			  <select ng-model="bookCtrl.book.type">
 				<option value="文庫">文庫</option>
 				<option value="新書">新書</option>
 				<option value="教科書">教科書</option>
@@ -45,34 +45,36 @@
 		  </tr>
 		  <tr>
 			<th>title</th>
-			<td><input type="text" required ng-model="registration.title" /></td>
+			<td><input type="text" required ng-model="bookCtrl.book.title" /></td>
 		  </tr>
 		  <tr>
 			<th>author</th>
-			<td><input type="text" required ng-model="registration.author" /></td>
+			<td><input type="text" required ng-model="bookCtrl.book.author" /></td>
 		  </tr>
 		  <tr>
 			<th>publish</th>
-			<td><input type="text" required ng-model="registration.publish" /></td>			
+			<td><input type="text" required ng-model="bookCtrl.book.publish" /></td>			
 		  </tr>
 		  <tr>
 			<th>price</th>
-			<td><input type="number" min="0" ng-model="registration.price" /></td>
+			<td><input type="number" min="0" ng-model="bookCtrl.book.price" /></td>
 		  </tr>
 		  <tr>
 			<th>year</th>
-			<td><input type="number" ng-model="registration.year" /></td>
+			<td><input type="number" ng-model="bookCtrl.book.year" /></td>
 		  </tr>
 		  <tr>
 			<th>tags</th>
-			<td><input type="text" ng-model="registration.tags" /></td>
+			<td><input type="text" ng-model="bookCtrl.book.tags" /></td>
 		  </tr>
 		  <tr>
 			<th>impressions</th>
-			<td><textarea rows="2" ng-model="registration.impressions"></textarea></td>
+			<td><textarea rows="2" ng-model="bookCtrl.book.impressions"></textarea></td>
 		  </tr>
 		</table>
+		<input type="submit" class="btn btn-primary pull-right" value="Submit" />
 	  </form>
+	  
 	  <hr />
 
 	  <p><b>登録件数: </b> <em>{{shelf.books.length}}</em> <b>件</b></p>
