prepare for next step

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 	</div><!-- /container -->
 	
 	<!-- include libraries -->
+	<script src="http://code.jquery.com/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 	<script src="js/external/angular.min.js"></script>	
 
 	<script src="js/app/app.js"></script>
