--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 	</div>
 
 	<div class="container">
-	  <form name="registrationForm" ng-controller="BookController as bookCtrl" ng-submit="bookCtrl.addBook(shelf)">
+	  <form name="registrationForm" ng-controller="BookController as bookCtrl" ng-submit="registrationForm.$valid && bookCtrl.addBook(shelf)" novalidate>
 		<h3>Book Registration</h3>
 		
 		<table>
 		  <tr>
 			<th>type</th>
 			<td>
-			  <select ng-model="bookCtrl.book.type">
+			  <select required ng-model="bookCtrl.book.type">
 				<option value="文庫">文庫</option>
 				<option value="新書">新書</option>
 				<option value="教科書">教科書</option>
@@ -57,22 +57,22 @@
 		  </tr>
 		  <tr>
 			<th>price</th>
-			<td><input type="number" min="0" ng-model="bookCtrl.book.price" /></td>
+			<td><input type="number" required min="0" ng-model="bookCtrl.book.price" /></td>
 		  </tr>
 		  <tr>
 			<th>year</th>
-			<td><input type="number" ng-model="bookCtrl.book.year" /></td>
+			<td><input type="number" required ng-model="bookCtrl.book.year" /></td>
 		  </tr>
 		  <tr>
 			<th>tags</th>
-			<td><input type="text" ng-model="bookCtrl.book.tags" /></td>
+			<td><input type="text" required ng-model="bookCtrl.book.tags" /></td>
 		  </tr>
 		  <tr>
 			<th>impressions</th>
-			<td><textarea rows="2" ng-model="bookCtrl.book.impressions"></textarea></td>
+			<td><textarea rows="2" required ng-model="bookCtrl.book.impressions"></textarea></td>
 		  </tr>
 		</table>
-		<input type="submit" class="btn btn-primary pull-right" value="Submit" />
+		<input type="submit" required class="btn btn-primary pull-right" value="Submit" />
 	  </form>
 	  
 	  <hr />
