--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 	  
 	  <hr />
 
+	  <h3>Result</h3>
+
 	  <p><b>登録件数: </b> <em>{{shelf.books.length}}</em> <b>件</b></p>
 			
 	  <table class="table table-striped" ng-show="shelf.books.length">
